@@ -1,7 +1,7 @@
 ## Interface: 80000
 ## Title: [Lib] Scorpio
 ## Author: kurapica125@outlook.com
-## Version: v023
+## Version: v024
 ## Notes: Scorpio Addon FrameWork
 ## URL: http://github.com/kurapica/Scorpio
 ## Dependencies: PLoop
