@@ -1,3 +1,6 @@
+2018/07/27
+	1. Add the missing code for cache recycle
+
 2018/07/25
 	1. Fix the OnSpecChanged event don't fire when player's spec is changed by the battlefield.
 
